--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -120,7 +120,14 @@
                 </div>
 
                 <div style="display:flex; flex-flow: row wrap; justify-content: flex-start; align-items: baseline;">
-                  <div style="display: flex;"> via </div>
+                  <div class="input-field"
+                    style=" margin-left: 8px; display: flex; flex-grow: 1; vertical-align: middle;">
+                    <input id="call_to_action" type="text" class="input-font-size">
+                    <label for="call_to_action" class="input-font-size">Call to action</label> </div>
+                </div>
+                <br>
+                <div style="display:flex; flex-flow: row wrap; justify-content: flex-start; align-items: baseline;">
+                  <div style="display: flex;"> (optional) via </div>
                   <div class="input-field"
                     style=" margin-left: 8px; display: flex; flex-grow: 1;  vertical-align: middle;">
                     <input id="twitter_handel" type="text" class="input-font-size">
@@ -181,7 +188,9 @@
                 <img src="./twitter.png" style="border-radius: 6px; height: 30px; margin-right: 5px; display: block;" />
                 <span id="with-template-pitch-text">When <span id="problem_statement_text"></span>, <br><span
                     id="company_name_text"></span> do <span id="solution_statement_text"></span>, <br>so that <span
-                    id="impact_statement_text"></span>.</span>
+                    id="impact_statement_text"></span>.<br>
+                  <span id="call_to_action_text"></span>
+                </span>
                 <br><br>
               </div>
             </div>
@@ -274,13 +283,15 @@
       let solutionStatement = '<b>solution statement</b>';
       let impactStatement = '<b>impact statement</b>';
       let twitterHandel = '<b>@twitter handel</b>';
+      let callToAction = 'Call to Action.'
 
       let updateTemplateFields = function () {
         $('#problem_statement_text').html(problemStatement);
         $('#company_name_text').html(companyName);
         $('#solution_statement_text').html(solutionStatement);
         $('#impact_statement_text').html(impactStatement);
-        $('#twitter_handel_text').html(twitterHandel)
+        $('#twitter_handel_text').html(twitterHandel);
+        $('#call_to_action_text').html(callToAction);
       };
 
       updateTemplateFields();
@@ -302,6 +313,11 @@
 
       $('#impact_statement').keyup(function () {
         impactStatement = $('#impact_statement').val();
+        updateTemplateFields();
+      });
+
+      $('#call_to_action').keyup(function () {
+        callToAction = $('#call_to_action').val();
         updateTemplateFields();
       });
 
