--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           href="https://www.patreon.com/bePatron?u=14590376" target="_blank">
           <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
           &nbsp;
-          <span> Become a patron</span>
+          <span> Become a Patron</span>
         </a>
       </li>
       <!-- 
@@ -202,20 +202,65 @@
       <h1 class="my-4 font-normal text-grey-darker">Join our crowdfunding journey</h1>
       <p class="">
         As we are working hard to achieve a great quality platform, we need
-        your expert opinion. Follow our patreon posts to keep up with developments. Becoming a Supporter patron gives
-        you first access to our donation enabled freemium experiments.
-        Being an Innovator or Angel patron means you are automatically included in the early platform adopter program
-        and you get to: use the platform, offer feedback, have access to all training videos and so much more.
-      </p>
-      <br>
+        your help. Follow our Patreon posts to keep up with developments. Become a patron and help the project grow.
+        There's no strings attached. You can
+        cancel any time.
+      </p> <br>
+      <div class="container max-w-xl m-auto flex flex-wrap items-start justify-center">
+        <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
+          <div class="overflow-hidden bg-white rounded-lg text-center">
+            <div class="p-6 flex flex-col justify-between ">
+              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Support the development</h4>
+              <p class="text-center">
+                <span class="text-grey-darker">
+                  <b> $4 </b> PER MONTH <br> + tax</span>
+              </p>
+            </div>
+            <img style="max-height: 200px;" src="./supporter-patron.png" alt="supporter patron">
+            <div class="p-6 flex flex-col justify-between ">
+              <p class="text-center text-sm">
+                Access exclusive content about our market research trends. <br>
+                Stay in touch with the latest developments. <br>
+                Be among the first to benefit from future offers. <br> <br>
+                You are among the first to be notified about our public research
+                experiments. <b> Thanks for supporting the project!</b>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
+          <div class="overflow-hidden bg-white rounded-lg text-center">
+            <div class="p-6 flex flex-col justify-between ">
+              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Innovator - Be among the first
+                users</h4>
+              <p class="text-center">
+                <span class="text-grey-darker">
+                  <b> $14 </b>
+                  PER MONTH <br> + tax </span>
+              </p>
+            </div>
+            <img style="max-height: 200px;" src="./innovator-patron.png" alt="innovator patron">
+            <div class="p-6 flex flex-col justify-between ">
+              <p class="text-center text-sm">
+                You'll take part in our innovation process. <br>
+                Get early access to the beta platform. <br>
+                Free training videos and webinars. <br>
+                Participate in discussions about future features. <br> <br>
+                You also benefit from all the offers from the Supporter tier, as well as early notifications to my AI &
+                research experiments. <b> Thank you for helping trendy dots grow!</b>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="w-full flex flex-col text-center items-center justify-center">
-        <img src="../innovator-patron.png" style="height: 130px;" alt="">
-        <br>
+
         <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow"
           href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
           <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
           &nbsp;
-          <span style="white-space: nowrap;"> Become an Innovator patron</span>
+          <span style="white-space: nowrap;"> Become a Patron</span>
         </a>
       </div>
       <br>
