--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -123,7 +123,7 @@
                   <div class="input-field"
                     style=" margin-left: 8px; display: flex; flex-grow: 1; vertical-align: middle;">
                     <input id="call_to_action" type="text" class="input-font-size">
-                    <label for="call_to_action" class="input-font-size">Call to action</label> </div>
+                    <label for="call_to_action" class="input-font-size">Call to Action</label> </div>
                 </div>
                 <br>
                 <div style="display:flex; flex-flow: row wrap; justify-content: flex-start; align-items: baseline;">
