--- a/invest/index.html
+++ b/invest/index.html
@@ -196,6 +196,7 @@
 
 
   <!-- Form -->
+  <!-- Form -->
   <section id="contact-us" class="antialiased font-sans w-full text-left text-black py-8" id="subscribe-section"
     style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
@@ -219,6 +220,7 @@
             <img style="max-height: 200px;" src="../supporter-patron.png" alt="supporter patron">
             <div class="p-6 flex flex-col justify-between ">
               <p class="text-center text-sm">
+                <b>Up to 300 research reports. </b> <br>
                 Access exclusive content about our market research trends. <br>
                 Stay in touch with the latest developments. <br>
                 Be among the first to benefit from future offers. <br> <br>
@@ -243,6 +245,7 @@
             <img style="max-height: 200px;" src="../innovator-patron.png" alt="innovator patron">
             <div class="p-6 flex flex-col justify-between ">
               <p class="text-center text-sm">
+                <b>Unilimited resarch reports. </b><br>
                 You'll take part in our innovation process. <br>
                 Get early access to the beta platform. <br>
                 Free training videos and webinars. <br>
@@ -255,7 +258,6 @@
         </div>
       </div>
       <div class="w-full flex flex-col text-center items-center justify-center">
-
         <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow"
           href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
           <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
@@ -267,7 +269,8 @@
       <div class="w-full flex flex-col text-center items-center justify-center">
         <!-- contact form -->
         <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
-          <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform at scale?</h1>
+          <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform at scale? Request a demo.
+          </h1>
           <p class="">
             Are you a media company, newspaper, or any business which is interested in internet behaviour research?
             Request a demo by filling out this form. We will happily contact you with details.
@@ -325,7 +328,7 @@
             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
               <button type="submit"
                 class="submit btn btn-primary btn-shadow btn-gradient py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-                style=" font-weight: 800; border:1px solid #FBB82B;">Send Message</button>
+                style=" font-weight: 800; border:1px solid #FBB82B;">Request Demo</button>
             </div>
             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
 
