--- a/invest/project.html
+++ b/invest/project.html
@@ -272,7 +272,8 @@
           <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform at scale? Request a demo.
           </h1>
           <p class="">
-            Are you a media company, newspaper, or any business which is interested in internet behaviour research?
+            Is your company interested in internet behaviour research, consumer needs projections or event impact
+            measurements?
             Request a demo by filling out this form. We will happily contact you with details.
           </p>
         </div>
