--- a/invest/project.html
+++ b/invest/project.html
@@ -196,80 +196,14 @@
 
 
   <!-- Form -->
-  <!-- Form -->
-  <section id="contact-us" class="antialiased font-sans w-full text-left text-black py-8" id="subscribe-section"
+  <section id="contact-us" class="antialiased font-sans w-full text-left text-black py-2" id="subscribe-section"
     style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
-    <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
-      <h1 class="my-4 font-normal text-grey-darker">Join our crowdfunding journey</h1>
-      <p class="">
-        As we are working hard to achieve a great quality platform, we need
-        your help. Follow our Patreon posts to keep up with developments. Become a patron and help the project grow.
-        There's no strings attached. You can
-        cancel any time.
-      </p> <br>
-      <div class="container max-w-xl m-auto flex flex-wrap items-start justify-center">
-        <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
-          <div class="overflow-hidden bg-white rounded-lg text-center">
-            <div class="p-6 flex flex-col justify-between ">
-              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Support the development</h4>
-              <p class="text-center">
-                <span class="text-grey-darker">
-                  <b> $4 </b> PER MONTH <br> + tax</span>
-              </p>
-            </div>
-            <img style="max-height: 200px;" src="../supporter-patron.png" alt="supporter patron">
-            <div class="p-6 flex flex-col justify-between ">
-              <p class="text-center text-sm">
-                <b>Up to 300 research reports. </b> <br>
-                Access exclusive content about our market research trends. <br>
-                Stay in touch with the latest developments. <br>
-                Be among the first to benefit from future offers. <br> <br>
-                You are among the first to be notified about our public research
-                experiments. <b> Thanks for supporting the project!</b>
-              </p>
-            </div>
-          </div>
-        </div>
+    <div class="container mx-auto max-w-xl font-normal leading-normal text-center lg:text-left ">
 
-        <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
-          <div class="overflow-hidden bg-white rounded-lg text-center">
-            <div class="p-6 flex flex-col justify-between ">
-              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Innovator - Be among the first
-                users</h4>
-              <p class="text-center">
-                <span class="text-grey-darker">
-                  <b> $14 </b>
-                  PER MONTH <br> + tax </span>
-              </p>
-            </div>
-            <img style="max-height: 200px;" src="../innovator-patron.png" alt="innovator patron">
-            <div class="p-6 flex flex-col justify-between ">
-              <p class="text-center text-sm">
-                <b>Unilimited resarch reports. </b><br>
-                You'll take part in our innovation process. <br>
-                Get early access to the beta platform. <br>
-                Free training videos and webinars. <br>
-                Participate in discussions about future features. <br> <br>
-                You also benefit from all the offers from the Supporter tier, as well as early notifications to my AI &
-                research experiments. <b> Thank you for helping trendy dots grow!</b>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="w-full flex flex-col text-center items-center justify-center">
-        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow"
-          href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
-          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
-          &nbsp;
-          <span style="white-space: nowrap;"> Become a Patron</span>
-        </a>
-      </div>
-      <br>
       <div class="w-full flex flex-col text-center items-center justify-center">
         <!-- contact form -->
         <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
-          <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform at scale? Request a demo.
+          <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform? Request a demo.
           </h1>
           <p class="">
             Is your company interested in internet behaviour research, consumer needs projections or event impact
@@ -337,8 +271,76 @@
           </div>
         </form>
       </div>
+      <br>
+      <h1 class="my-4 font-normal text-grey-darker">Join our crowdfunding journey</h1>
+      <p class="">
+        As we are working hard to achieve a great quality platform, we need
+        your help. Follow our Patreon posts to keep up with developments. Become a patron and help the project grow.
+        There's no strings attached. You can
+        cancel any time.
+      </p> <br>
+      <div class="container max-w-xl m-auto flex flex-wrap items-start justify-center">
+        <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
+          <div class="overflow-hidden bg-white rounded-lg text-center">
+            <div class="p-6 flex flex-col justify-between ">
+              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Support the development</h4>
+              <p class="text-center">
+                <span class="text-grey-darker">
+                  <b> $4 </b> PER MONTH <br> + tax</span>
+              </p>
+            </div>
+            <img style="max-height: 200px;" src="../supporter-patron.png" alt="supporter patron">
+            <div class="p-6 flex flex-col justify-between ">
+              <p class="text-center text-sm">
+                <b>Up to 300 research reports. </b> <br>
+                Access exclusive content about our market research trends. <br>
+                Stay in touch with the latest developments. <br>
+                Be among the first to benefit from future offers. <br> <br>
+                You are among the first to be notified about our public research
+                experiments. <b> Thanks for supporting the project!</b>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
+          <div class="overflow-hidden bg-white rounded-lg text-center">
+            <div class="p-6 flex flex-col justify-between ">
+              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Innovator - Be among the first
+                users</h4>
+              <p class="text-center">
+                <span class="text-grey-darker">
+                  <b> $14 </b>
+                  PER MONTH <br> + tax </span>
+              </p>
+            </div>
+            <img style="max-height: 200px;" src="../innovator-patron.png" alt="innovator patron">
+            <div class="p-6 flex flex-col justify-between ">
+              <p class="text-center text-sm">
+                <b>Unilimited resarch reports. </b><br>
+                You'll take part in our innovation process. <br>
+                Get early access to the beta platform. <br>
+                Free training videos and webinars. <br>
+                Participate in discussions about future features. <br> <br>
+                You also benefit from all the offers from the Supporter tier, as well as early notifications to my AI &
+                research experiments. <b> Thank you for helping trendy dots grow!</b>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="w-full flex flex-col text-center items-center justify-center">
+        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow"
+          href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
+          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          &nbsp;
+          <span style="white-space: nowrap;"> Become a Patron</span>
+        </a>
+      </div>
+
     </div>
   </section>
+
 
   <section class="bg-white py-4 font-sans">
     <h3 class="font-medium text-grey-darkest mb-4 text-center text-2xl py-4"> Written using td. trend research </h3>
