--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -77,11 +77,11 @@
 
   <!-- header mobile statement-->
   <section style="margin-bottom: 0; margin-top:110px; "
-    class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center md:px-8 lg:mx-8">
-    <div class="w-full lg:w-2/3">
+    class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center md:px-8">
+    <div class="w-full lg:w-1/2">
       <img src="./images/m-header.png" alt="" style="margin-top: 20px;" />
     </div>
-    <div class="w-full lg:w-1/3 flex flex-col justify-center items-start items-center lg:items-start">
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start items-center lg:items-start">
       <h2 class="my-4 font-normal">
         <span style="font-weight:600; color:black;"> Easy mobile screens</span>
       </h2>
@@ -100,9 +100,9 @@
   </section>
   <!-- header desktop statement-->
   <section style="margin-bottom: 0; margin-top:70px; "
-    class="font-sans container m-auto max-w-xl flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center md:px-8 lg:mx-8">
+    class="font-sans container m-auto max-w-xl flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center md:px-8">
 
-    <div class="w-full lg:w-1/3 flex flex-col justify-center items-start items-center lg:items-end">
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start items-center lg:items-end">
       <h2 class="my-4 font-normal">
         <span style="font-weight:600; color:black;"> Easy landing page design</span>
       </h2>
@@ -118,7 +118,7 @@
         <span> Try it FREE</span>
       </a>
     </div>
-    <div class="w-full lg:w-2/3">
+    <div class="w-full lg:w-1/2">
       <img src="./images/d-header.png" alt="" style="margin-top: 20px;" />
     </div>
   </section>
