--- a/web-stitches/1/index.html
+++ b/web-stitches/1/index.html
@@ -25,6 +25,11 @@
   <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://trendydots.com/css/jquery-eu-cookie-law-popup.css" />
   <script src="https://trendydots.com/js/jquery-eu-cookie-law-popup.js"></script>
+
+  <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="trendydots"
+    data-description="Support me on Buy me a coffee!"
+    data-message="Thank you for visiting. You can now buy me a coffee!" data-color="#FF813F" data-position="right"
+    data-x_margin="18" data-y_margin="22"></script>
 </head>
 
 <body class="overflow-hidden font-sans eupopup eupopup-bottom eupopup-style-compact" style="background: #fafafa">
@@ -32,9 +37,9 @@
   <!-- the web elements section -->
   <section class="fixed pin-l pin-t pin-b overflow-y-scroll w-1/2">
     <div class="fixed font-black bg-white w-1/2 mb-3 " style="z-index: 100">
-      <h2 class="pb-2 pt-1 mx-3" style="font-weight: 800; display: flex; flex-direction: row">
+      <h2 class="pb-2 pt-1 mx-3" style="font-weight: 600; display: flex; flex-direction: row">
         <a href="/web-stitches/" class="no-underline text-black transition" style="line-height: 1.8em">
-          <img src="https://trendydots.com/logo.png" class="inline-block mr-2 w-10 -mb-2" />web stitches</a>
+          <img src="https://trendydots.com/logo.png" class="inline-block mr-2 w-10 -mb-2" />web-stitches</a>
         <div style="flex:auto"></div>
         <a style="display: inline;" href="https://www.patreon.com/bePatron?u=34703537">
           <img src="./images/patreon-btn.png" alt="Become a patron" style="height: 1.8em">
