--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -43,7 +43,7 @@
 
 <body class="eupopup eupopup-bottom eupopup-style-compact">
   <nav
-    class="font-sans md:shadow-none md:bg-transparent bg-white shadow text-center fixed flex justify-between py-4 px-8 overflow-hidden w-full flex-col md:flex-row"
+    class="font-sans md:shadow-none md:bg-transparent bg-white shadow text-center flex justify-between py-4 px-8 overflow-hidden w-full flex-col md:flex-row"
     style="margin-bottom: 5px; z-index: 10; top:0; padding-left: 3%;
     padding-right: 3%;">
     <a class="block md:text-left text-center no-underline text-black"
@@ -61,13 +61,12 @@
           <span> Become a patron</span>
         </a>
       </li>
-
       <li>
-        <a href="https://www.paypal.me/trendydots" target="_blank"
+        <a href="https://www.buymeacoffee.com/trendydots" target="_blank"
           class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
-          <img src="../paypal-logo.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          <img src="../bmc-logo.svg" style="height: 1.5em; vertical-align: middle;" alt="">
           &nbsp;&nbsp;
-          <span> Donate one time</span>
+          <span> Buy me a coffee</span>
         </a>
       </li>
 
@@ -140,14 +139,16 @@
           If you like the project and want to help it grow, <br> please consider donating and becoming a patron. </h1>
         <br><br>
         <div class="flex md:flex-row flex-col items-center justify-center mb-8">
-          <div class="flex flex-col ">
-            <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-              href="https://www.patreon.com/bePatron?u=34703537" target="_blank">
-              <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
-              &nbsp;
-              <span> Become a patron</span>
+          <div class="flex flex-col">
+            <a href="https://www.paypal.me/trendydots" target="_blank"
+              class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
+              <img src="../bmc-logo.svg" style="height: 1.5em; vertical-align: middle;" alt="">
+              &nbsp;&nbsp;
+              <span> Buy me a cofee</span>
             </a>
           </div>
+
+          <!-- 
           &nbsp;&nbsp;&nbsp;&nbsp;
           <div class="flex flex-col">
             <a href="https://www.paypal.me/trendydots" target="_blank"
@@ -157,10 +158,19 @@
               <span> Donate one time</span>
             </a>
           </div>
-
+          -->
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          <div class="flex flex-col ">
+            <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
+              href="https://www.patreon.com/bePatron?u=34703537" target="_blank">
+              <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
+              &nbsp;
+              <span> Become a patron</span>
+            </a>
+          </div>
         </div>
-        <h1 class="leading-normal mb-2 text-center "> Upcoming features </h1>
       </div>
+      <!-- old upcomming features
       <div class="w-full flex md:flex-row flex-col items-center justify-center px-8 lg:mx-8">
         <div class="w-full md:w-1/2 my-4 px-8">
           <h2 class="leading-normal mb-2 text-center text-grey-dark">I. Components Editing </h2>
@@ -181,6 +191,35 @@
 
         </div>
       </div>
+      -->
+  </section>
+  <section class="font-sans w-full px-8 flex flex-col lg:flex-col text-center" style="margin-bottom: 0;">
+    <div class="text-center">
+      <h1 class="leading-normal mb-2 text-center "> Upcoming features for our patrons</h1>
+    </div>
+    <div class="flex flex-col sm:flex-row flex-wrap my-8 w-full items-center justify-around">
+      <div style="background: #F5F5F5; "
+        class="m-2 w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
+        <h3 class="mt-4 mb-1">Individual Accounts <br> Multiple private projects</h3>
+        <p class="mt-4 text-center text-grey-darker leading-normal px-6 ">Build multiple private projects. Save & Update
+          them as many times you need.</p>
+      </div>
+      <div style="background: #F5F5F5;"
+        class="m-2 w-full sm:w-1/2 md:w-1/4  flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
+
+        <h3 class="mt-4 mb-1">Premium Components</h3>
+        <p class="mt-4 text-center text-grey-darker leading-normal ">Get access to exclusive premium components with a
+          high degree of responsiveness, some of which will allow customization</p>
+      </div>
+      <div style="background: #F5F5F5;"
+        class="m-2 w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
+
+        <h3 class="mt-4 mb-1">Mobile & Desktop working together</h3>
+        <p class="mt-4 text-center text-grey-darker leading-normal ">Easily switch between mobile and desktop views and
+          experience your mockups responsiveness. Download both versions in a ready to code bundle.</p>
+      </div>
+
+    </div>
   </section>
   <!-- how to use -->
   <section class="my-8 lg:my-16 font-sans w-full m-auto flex flex-col text-center justify-center items-center"
