added zoom stuff

--- a/web-stitches/1/index.html
+++ b/web-stitches/1/index.html
@@ -126,6 +126,13 @@
     gtag("js", new Date());
 
     gtag("config", "UA-113784035-1");
+
+    if (navigator.appVersion.indexOf("Win") != -1) {
+      var styleSheet = document.createElement("style")
+      styleSheet.type = "text/css"
+      styleSheet.innerText = 'body { zoom: 0.83; }'
+      document.head.appendChild(styleSheet)
+    }
   </script>
 
 
