--- a/web-stitches/2/index.html
+++ b/web-stitches/2/index.html
@@ -146,7 +146,7 @@
     style="width:80px; height: 100vh; border-left: 1px solid transparent">
   </section>
 
-  <script src="public/client.js"></script>
+  <script src="public/client.js?v=2"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
@@ -163,7 +163,7 @@
     if (navigator.appVersion.indexOf("Win") != -1) {
       var styleSheet = document.createElement("style")
       styleSheet.type = "text/css"
-      styleSheet.innerText = 'body { zoom: 0.85; }'
+      styleSheet.innerText = 'body { zoom: 0.83; }'
       document.head.appendChild(styleSheet)
     }
   </script>
