updated web stitches

--- a/web-stitches/1/index.html
+++ b/web-stitches/1/index.html
@@ -82,7 +82,7 @@
       <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
       <button class="shadow text-center py-3 px-4 bg-black hover:text-green text-white js-download transition-normal"
         style="display: inline-block; border-radius: 45px; font-size: 0.86em;">
-        Generate HTML + CSS
+        Download HTML + CSS
       </button>
       <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
       <a href="https://v0.tailwindcss.com/docs/what-is-tailwind/" target="_blank"
