--- a/web-stitches/2/index.html
+++ b/web-stitches/2/index.html
@@ -83,7 +83,7 @@
     <header class="mb-4 text-center">
       <button class="shadow text-center py-3 px-4 bg-black hover:text-green text-white js-download transition-normal"
         style="display: inline-block; border-radius: 45px; font-size: 0.86em;">
-        Generate HTML + CSS
+        Download HTML + CSS
       </button>
       <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
       <a href="https://materializecss.com/getting-started.html" target="_blank"
