--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -85,8 +85,12 @@
         <span style="font-weight:600; color:black;"> Easy mobile screens</span>
       </h2>
       <h2 class="my-4 font-normal text-grey-darker">
-        Easily drag and drop UI components and build beautiful mobile and web screens. <br> <br> A perfect tool for
-        hackathons
+        Easily drag and drop UI components and build beautiful mobile and web screens.
+        <br> <br>
+        A perfect tool for brainstorming and hackathons
+        <img src="./images/bootstrapCssIcon.png" style="height: 50px;" alt="">
+        <img src="./images/materializeCSSIcon.png" style="height: 50px;" alt="">
+        <img src="./images/chartJsIcon.png" style="height: 50px;" alt="">
       </h2>
 
       <a href="./2/" target="_blank"
@@ -106,9 +110,13 @@
         <span style="font-weight:600; color:black;"> Easy landing page design</span>
       </h2>
       <h2 class="my-4 font-normal text-grey-darker lg:text-right">
-        Experiment with building beautiful landing pages and article designs. <br> <br> Drag and drop web components.
-        Replace. Get
-        creative.
+        Experiment with building beautiful landing pages and article designs.
+        <br> <br>
+        Drag and drop web components. <br>
+        Replace. Get creative along side your clients.
+        <br>
+        <img src="./images/tailwindCssIcon.png" style="height: 50px;" alt="">
+        <img src="./images/googleChartsIcon.png" style="height: 50px;" alt="">
       </h2>
 
       <a href="./1/" target="_blank"
