--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -43,7 +43,7 @@
 
 <body class="eupopup eupopup-bottom eupopup-style-compact">
   <nav
-    class="font-sans md:shadow-none md:bg-transparent bg-white shadow text-center flex justify-between py-4 px-8 overflow-hidden w-full flex-col md:flex-row"
+    class="fixed font-sans md:shadow-none md:bg-transparent bg-white shadow text-center flex justify-between py-4 px-8 overflow-hidden w-full flex-col md:flex-row"
     style="margin-bottom: 5px; z-index: 10; top:0; padding-left: 3%;
     padding-right: 3%;">
     <a class="block md:text-left text-center no-underline text-black"
@@ -87,7 +87,7 @@
       <h2 class="my-4 font-normal text-grey-darker">
         Easily drag and drop UI components and build beautiful mobile and web screens.
         <br> <br>
-        A perfect tool for brainstorming and hackathons
+        A perfect tool for brainstorming and hackathons <br>
         <img src="./images/bootstrapCssIcon.png" style="height: 50px;" alt="">
         <img src="./images/materializeCSSIcon.png" style="height: 50px;" alt="">
         <img src="./images/chartJsIcon.png" style="height: 50px;" alt="">
@@ -122,7 +122,7 @@
       <a href="./1/" target="_blank"
         class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center"
         style="border-color: #F2D024; border-width: 5px;">
-        <span> Try it FREE</span>
+        <span> Try it free</span>
       </a>
     </div>
     <div class="w-full lg:w-1/2">
