--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -148,7 +148,7 @@
         <br><br>
         <div class="flex md:flex-row flex-col items-center justify-center mb-8">
           <div class="flex flex-col">
-            <a href="https://www.paypal.me/trendydots" target="_blank"
+            <a href="https://www.buymeacoffee.com/trendydots" target="_blank"
               class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
               <img src="../bmc-logo.svg" style="height: 1.5em; vertical-align: middle;" alt="">
               &nbsp;&nbsp;
