--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
       <div class="w-full flex flex-col text-center items-center justify-center">
         <!-- contact form -->
         <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
-          <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform? Request a demo.
+          <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform? Request a free account.
           </h1>
           <p class="">
             Is your company interested in internet behaviour research, consumer needs projections or event impact
             measurements?
-            Request a demo by filling out this form. We will happily contact you with details.
+            Request a free account by filling out this form. We will happily contact you with details.
           </p>
         </div>
         <!-- /contact form -->
@@ -256,18 +256,11 @@
                 id="grid-demo-reason" type="text" name="demo-reason" placeholder="">
             </div>
           </div>
-          <div class="flex flex-wrap -mx-3 mb-2">
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-              <input type="hidden" name="only_fake_users"><input>
-            </div>
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-              <button type="submit"
-                class="submit btn btn-primary btn-shadow btn-gradient py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-                style=" font-weight: 800; border:1px solid #FBB82B;">Request Demo</button>
-            </div>
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-
-            </div>
+          <input type="hidden" name="only_fake_users"><input>
+          <div class="flex flex-wrap -mx-3 mb-2 justify-center">
+            <button type="submit"
+              class="submit btn btn-primary btn-shadow btn-gradient py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
+              style=" font-weight: 800; border:1px solid #FBB82B;">Request Free Account</button>
           </div>
         </form>
       </div>
