--- a/index.html
+++ b/index.html
@@ -199,9 +199,8 @@
   <section id="contact-us" class="antialiased font-sans w-full text-left text-black py-2" id="subscribe-section"
     style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
     <div class="container mx-auto max-w-xl font-normal leading-normal text-center lg:text-left ">
-
+      <!-- contact form
       <div class="w-full flex flex-col text-center items-center justify-center">
-        <!-- contact form -->
         <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
           <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform? Request a free account.
           </h1>
@@ -211,7 +210,6 @@
             Request a free account by filling out this form. We will happily contact you with details.
           </p>
         </div>
-        <!-- /contact form -->
         <form id="request-demo" class="w-full max-w-md" accept-charset="UTF-8"
           action="https://usebasin.com/f/06dcf3d4ebaf" method="POST">
           <div class="flex flex-wrap -mx-3 mb-6">
@@ -265,7 +263,9 @@
         </form>
       </div>
       <br>
-      <h1 class="my-4 font-normal text-grey-darker">Join our crowdfunding journey</h1>
+    -->
+      <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform? Join our crowdfunding journey
+      </h1>
       <p class="">
         As we are working hard to achieve a great quality platform, we need
         your help. Follow our Patreon posts to keep up with developments. Become a patron and help the project grow.
