--- a/index.html
+++ b/index.html
@@ -264,28 +264,27 @@
       </div>
       <br>
     -->
-      <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform? Join our crowdfunding journey
+      <h1 class="my-4 font-normal text-grey-darker">Interested in using the platform?
       </h1>
       <p class="">
-        As we are working hard to achieve a great quality platform, we need
-        your help. Follow our Patreon posts to keep up with developments. Become a patron and help the project grow.
-        There's no strings attached. You can
-        cancel any time.
+        Follow our Patreon posts to keep up with developments. Become a patron and get access to our project.
+        There's no strings attached. You can cancel any time.
       </p> <br>
       <div class="container max-w-xl m-auto flex flex-wrap items-start justify-center">
         <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
           <div class="overflow-hidden bg-white rounded-lg text-center">
             <div class="p-6 flex flex-col justify-between ">
-              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Support the development</h4>
+              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Basic</h4>
               <p class="text-center">
-                <span class="text-grey-darker">
-                  <b> $4 </b> PER MONTH <br> + tax</span>
+                <span class="text-grey-darker text-3xl">
+                  <b> $24 </b> </span> <br> <span class="text-xl">PER MONTH + tax </span>
+              </p>
               </p>
             </div>
-            <img style="max-height: 200px;" src="./supporter-patron.png" alt="supporter patron">
+            <img style="max-height: 150px;" src="./supporter-patron.png" alt="supporter patron">
             <div class="p-6 flex flex-col justify-between ">
               <p class="text-center text-sm">
-                <b>Up to 300 research reports. </b> <br>
+                <b>Up to 300 research reports and all apps. </b> <br>
                 Access exclusive content about our market research trends. <br>
                 Stay in touch with the latest developments. <br>
                 Be among the first to benefit from future offers. <br> <br>
@@ -299,15 +298,13 @@
         <div class="w-full md:w-1/2 lg:w-1/2 flex flex-col mb-8 px-3">
           <div class="overflow-hidden bg-white rounded-lg text-center">
             <div class="p-6 flex flex-col justify-between ">
-              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Innovator - Be among the first
-                users</h4>
+              <h4 class="font-medium text-grey-darkest mb-4 leading-normal text-center">Innovator</h4>
               <p class="text-center">
-                <span class="text-grey-darker">
-                  <b> $14 </b>
-                  PER MONTH <br> + tax </span>
+                <span class="text-grey-darker text-3xl">
+                  <b> $58 </b> </span> <br> <span class="text-xl">PER MONTH + tax </span>
               </p>
             </div>
-            <img style="max-height: 200px;" src="./innovator-patron.png" alt="innovator patron">
+            <img style="max-height: 150px;" src="./innovator-patron.png" alt="innovator patron">
             <div class="p-6 flex flex-col justify-between ">
               <p class="text-center text-sm">
                 <b>Unilimited resarch reports. </b><br>
@@ -398,7 +395,7 @@
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
-        NEW! Try out our summarisation tool for free
+        FREE! Try out our summarisation tool for free
       </h1>
       <br />
       <p class="leading-normal mb-4 ">
