--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <a href="#contact-us" target="_self"
         class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center"
         style="border-color: pink;">
-        <span> Contact us</span>
+        <span> Create your account </span>
       </a>
     </div>
 
